--- a/main.html
+++ b/main.html
@@ -11,12 +11,12 @@
   <body>
     <h1 style="text-align: center">Arrange Images by drag and drop</h1>
     <div class="flex" id="parent">
-		<div draggable="true" class="image" id="drag1"></div>
-		<div draggable="true" class="image" id="drag2"></div>
-		<div draggable="true" class="image" id="drag3"></div>
-		<div draggable="true" class="image" id="drag4"></div>
-		<div draggable="true" class="image" id="drag5"></div>
-		<div draggable="true" class="image" id="drag6"></div>
-	</div>
+      <div draggable="true" class="image" >Image 1</div>
+      <div draggable="true" class="image" >Image 2</div>
+      <div draggable="true" class="image" >Image 3</div>
+      <div draggable="true" class="image" >Image 4</div>
+      <div draggable="true" class="image" >Image 5</div>
+      <div draggable="true" class="image" >Image 6</div>
+    </div>
   </body>
 </html>
